--- a/hm.tex
+++ b/hm.tex
@@ -194,7 +194,7 @@ A number of extra references covering some of the topics mentioned above is \hre
 
 Please don't be afraid to send me comments to improve the course or the text and to fix the many typos that will surely be in this first draft. They will be very appreciated.
 
-I am extremely grateful to Nithesh Balasubramanian, Senan Bird, Riccardo Bonetto, Dijs de Neeling, Mollie Jagoe-Brown, Anouk Pelzer, Robbert Scholtens, Felix Semler, Albert \v{S}ilvans and Jermain Wall\'e for their careful reading of the notes and their useful comments and corrections.
+I am extremely grateful to Nithesh Balasubramanian, Senan Bird, Riccardo Bonetto, Dijs de Neeling, Mollie Jagoe-Brown, Anouk Pelzer, Danique de Ruiter, Robbert Scholtens, Felix Semler, Albert \v{S}ilvans and Jermain Wall\'e for their careful reading of the notes and their useful comments and corrections.
 
 Last but not least, I owe a huge debt of gratitude to \href{https://crojasmolina.com}{Constanza Rojas-Molina}, who kindly allowed me to use some of her beautiful artworks in these notes.
 
@@ -242,7 +242,7 @@ Let's leave it here for now, we will come back to it later on.
 
 In general we will consider systems of $N$ point particles.
 These will be described by a set of $N$ position vectors $\bx_k = (x_k, y_k ,z_k)$ with masses $m_k$, $k = 1, \ldots, N$.
-For convenience we will denote $\bx = (\bx_1, \ldots, \bx_N)\in\R^{3N}$, and $\bm{m} = (m_1, \ldots, m_N)\in\R^N$.
+For convenience we will denote\footnote{Here we are identifying $\R^{3\times N}$, the space of $3\times N$ matrices, and $\R^{3N}$, the space of $3N$ vectors. Namely, $\bx = (\bx_1, \ldots, \bx_N) = (x_1, y_1, z_1, x_2, y_2, z_2, \ldots, x_N, y_N, z_N)$ is used interchangeably as the vector of positions of the points in three-space or as the vector including all the positions of the $N$ bodies together.} $\bx = (\bx_1, \ldots, \bx_N)\in\R^{3N}$, and $\bm{m} = (m_1, \ldots, m_N)\in\R^N$.
 We call $\bx(t)$ the \emph{configuration} of the system at time $t$ in the \emph{configuration space} $\R^{3N}$.
 
 \begin{example}\label{example:gcoords}
