--- a/hm.tex
+++ b/hm.tex
@@ -472,7 +472,7 @@ and the evolution of the system is described by the critical points with respect
       &\quad + O(\|h\|^2_X),
     \end{split}
   \end{equation}
-  where the inner product $\lag\cdot,\cdot\rag$ is to the usual scalar product in $\R^n$.
+  where the inner product $\lag\cdot,\cdot\rag$ is the usual scalar product in $\R^n$.
 
   Therefore,
   \begin{equation}
