--- a/hm.tex
+++ b/hm.tex
@@ -194,7 +194,7 @@ A number of extra references covering some of the topics mentioned above is \hre
 
 Please don't be afraid to send me comments to improve the course or the text and to fix the many typos that will surely be in this first draft. They will be very appreciated.
 
-I am extremely grateful to Nithesh Balasubramanian, Senan Bird, Riccardo Bonetto, Dijs de Neeling, Mollie Jagoe-Brown, Anouk Pelzer, Danique de Ruiter, Robbert Scholtens, Felix Semler, Albert \v{S}ilvans and Jermain Wall\'e for their careful reading of the notes and their useful comments and corrections.
+I am extremely grateful to Nithesh Balasubramanian, Senan Bird, Riccardo Bonetto, Dijs de Neeling, Mollie Jagoe-Brown, Anouk Pelzer, Danique de Ruiter, Robbert Scholtens, Felix Semler, Albert \v{S}ilvans, Josephine van Driel and Jermain Wall\'e for their careful reading of the notes and their useful comments and corrections.
 
 Last but not least, I owe a huge debt of gratitude to \href{https://crojasmolina.com}{Constanza Rojas-Molina}, who kindly allowed me to use some of her beautiful artworks in these notes.
 
@@ -1575,7 +1575,7 @@ These two properties give away the inverse of $\Phi_s$: $(\Phi_s)^{-1} = \Phi_{-
   For a more thorough account of these topics, and to understand how this relates to the concept of infinitesimal generators of group actions, refer to \cite[Chapters 9 and 20]{book:lee} or \cite[Chapters 3 and 4]{lectures:aom:seri}.
 \end{remark}
 
-As one can expect, if all $\Phi_s$ in a one-parameter group of diffeomorphisms are also symmetries of some lagrangian $L$ on a manifold $M$, we call $\Phi_s$ a \emph{one-parameter group of symmetries} for $(M,L)$. We can finally state Noether\footnote{For a pictorial glimpse to her life, loof for \#Noethember on \href{https://www.instagram.com/explore/tags/noethember/}{instagram} or \href{https://twitter.com/search?q=noethember}{twitter}.} theorem!
+As one can expect, if all $\Phi_s$ in a one-parameter group of diffeomorphisms are also symmetries of some lagrangian $L$ on a manifold $M$, we call $\Phi_s$ a \emph{one-parameter group of symmetries} for $(M,L)$. We can finally state Noether\footnote{For a pictorial glimpse to her life, look for \#Noethember on \href{https://www.instagram.com/explore/tags/noethember/}{instagram} or \href{https://twitter.com/search?q=noethember}{twitter}.} theorem!
 
 \begin{theorem}[Noether theorem]\label{thm:noether}
   Given a one--parameter group of symmetries $\Phi_s: M \to M$ of the mechanical system $(M,L)$, then there exists an integral of motion $I: TM \to \R$.
