--- a/hm.tex
+++ b/hm.tex
@@ -1691,7 +1691,7 @@ This fact can be also interpreted in the following way: the sum of all forces ac
   \begin{equation}
     \bm{P} = \bm{P}' + \bm{v}  \sum_{k=1}^N m_k.
   \end{equation}
-  If the total momentum is zero with respect to some reference frame, we say that the system is \emph{stationary} in the reference frame. For a closed system, it is always possible to find an inertial frame of reference, called \emph{co-moving} frame, in which the system becomes stationary. The speed of such special reference frame,
+  If the total momentum is zero with respect to some inertial reference frame (see Section~\ref{sec:dynamicspps}), we say that the system is \emph{stationary} in the reference frame. For a closed system, it is always possible to find an inertial frame of reference, called \emph{co-moving} frame, in which the system becomes stationary. The speed of such special reference frame,
   \begin{equation}
     \bm{v_T} = \frac{\bm{P}}{\sum_{k=1}^N m_k}
     = \frac{\sum_{k=1}^N m_k \dot \bx_k}{\sum_{k=1}^N m_k},
@@ -1729,7 +1729,7 @@ This fact can be also interpreted in the following way: the sum of all forces ac
 The isotropy of space is the statement that a closed system is invariant under rotations around a fixed axis. To work out the corresponding conserved quantities one can work directly with the infinitesimal form of the rotations.
 
 Let's first look at the invariants related to isotropy:
-rotations around an axis in $\R^3$ are identifiable with orthogonal transformation $A\in SO(3)$, the special orthogonal group -- orthogonal matrices $A^TA = Id$ with determinant $1$.
+rotations around an axis in $\R^3$ are identifiable with orthogonal transformation $A\in SO(3)$, the special orthogonal group -- orthogonal matrices $A^TA = \Id$ with determinant $1$.
 
 For future reference, it is worth recalling in more generality the structure of these transformations. We will do it briefly, for more details on the special orthogonal groups and their relation to rotations and vector products, you can refer to \cite{book:marsdenratiu}.
 
